feat(benchmark): Improve resource monitoring